# onnx

./: readme.md
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
examples/app/: LICENSE  pubspec.yaml
examples/app/android/app/: build.gradle
examples/app/assets/rive/: check_icon.riv  teddy_login_screen.riv  teddy_login_screen_old.riv
examples/app/ios/Runner/: Info.plist
examples/app/ios/Runner.xcodeproj/: project.pbxproj
examples/app/lib/: app.dart  main.dart  main_debug.dart
examples/app/lib/app_data/: app_data.dart  app_data_core.dart  app_sign.dart
examples/telegram_bot/: .gitignore  pubspec.yaml
examples/telegram_bot/lib/: white_list.dart
native_lib/: CMakeLists.txt  readme.md
onnx_web/: README.md  pubspec.yaml
onnx_web/.github/workflows/: beta_compile.yaml
onnx_web/android/app/: build.gradle
onnx_web/ios/Runner/: Info.plist
onnx_web/lib/: main.dart  main_debug.dart  onnx_web.dart
onnx_web/lib/page/: chat.dart  home.dart  sign.dart  sign_o_auth.dart
onnx_web/linux/: CMakeLists.txt  my_application.cc
onnx_web/macos/Runner.xcodeproj/: project.pbxproj
onnx_web/release/: Dockerfile
onnx_web/test/: widget_test.dart
onnx_web/web/: index.html  manifest.json
onnx_web/windows/: CMakeLists.txt
onnx_web/windows/packagex/: .gitignore
onnx_web/windows/runner/: Runner.rc  main.cpp
package/onnx/: README.md  pubspec.yaml
package/onnx/lib/: onnx.dart  onnx_core.dart
package/onnx_dart/: .gitignore  README.md  activate.sh  pubspec.yaml
package/onnx_dart/example/: readme.md
package/onnx_dart/lib/: onnx_dart.dart  onnx_dart_core.dart  onnx_dart_io.dart  onnx_dart_web.dart
package/onnx_dart/test/: onnx_dart_test.dart
package/onnx_flutter/: README.md  ffigen.yaml  pubspec.yaml
package/onnx_flutter/android/: build.gradle  settings.gradle
package/onnx_flutter/example/: README.md  pubspec.yaml
package/onnx_flutter/ios/: onnx_flutter.podspec
package/onnx_flutter/linux/: CMakeLists.txt
package/onnx_flutter/macos/: onnx_flutter.podspec
package/onnx_flutter/src/: CMakeLists.txt
package/onnx_flutter/windows/: CMakeLists.txt
(+251 files in other folders)
